--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-database.js"></script>
-        <script src="/momentjs/lib/moment/moment-with-locales.min.js"></script>
         <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
         <link rel="stylesheet" href="assets/CSS/syle.css">
     </head>
@@ -58,7 +57,7 @@
                      <label for="frequency-input">Frequency</label>
                      <input type="text" class="form-control" id="frequency-input" placeholder="Frequency">
                     </div>
-                    <button type="submit" class="btn btn-primary" id="submit">Submit</button>
+                    <button type="submit" class="btn btn-warning" id="submit">Submit</button>
                     <button type="clear" class="btn btn-light">Clear</button>
             </form>
         </div>
