--- a/index.html
+++ b/index.html
@@ -20,46 +20,67 @@
                     <div class="jumbotron jumbotron-fluid">
                         <div class="container">
                           <h1 class="display-4">I Choo-Choo-Choose You!!!!</h1>
-                          <p class="lead">YOU'RE THE ONE!!!!</p>
+                          <p class="lead"><strong>YOU'RE THE ONE!!!!</strong></p>
                         </div>
                       </div>
                 </div>
             </div>
+            <div class="container">
+            <div class="card">
+              <div class="card-header">
+                Current Train Schedule
+              </div>
             <table class="table table-bordered">
-                    <thead class="thead-dark">
-                      <tr>
-                        <th scope="col-12" id="head">Current Train Schedule</th>
-                      </tr>
+                    <thead>
                       <tr>
                         <th scope="col">Train Name</th>
                         <th scope="col">Destination</th>
-                        <th scope="col">Next Arrival(HH:mm-military time)</th>
+                        <th scope="col">Next Arrival</th>
                         <th scope="col">Frequency(mins)</th>
                         <th scope="col">Minutes Away</th>
                         </tr>
                     </thead>
                     <tbody id="train-display"></tbody>
             </table>
+            </div>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div class="container">
+            <div class="card">
+              <div class="card-header">
+                Train Information
+              </div>
             <form class="form-bordered">
                     <div class="form-group">
-                      <label for="trainName-input">Train Name</label>
+                      <label for="trainName-input"><strong>Train Name:</strong></label>
                       <input type="text" class="form-control" id="trainName-input" placeholder="Train Name">
                     </div>
                     <div class="form-group">
-                      <label for="destination-input">Destination</label>
+                      <label for="destination-input"><strong>Destination:</strong></label>
                       <input type="text" class="form-control" id="destination-input" placeholder="Destination">
                     </div>
                     <div class="form-group">
-                     <label for="time-input">Next Arrival</label>
-                     <input type="text" class="form-control" id="time-input" placeholder="Next Arrival(HH:mm-military time)">
+                     <label for="time-input"><strong>First Train of the Day:</strong></label>
+                     <div class="row">
+                      <div class="col-md-1">
+                        <input type="number" class="form-control" max="24" min="0" placeholder="0" id="hours">
+                      </div>:
+                      <div class="col-md-1">
+                        <input type="number" class="form-control" max="59" min="0" placeholder="0" id="minutes">
+                      </div>
+                    </div>
                     </div>
                     <div class="form-group">
-                     <label for="frequency-input">Frequency</label>
-                     <input type="text" class="form-control" id="frequency-input" placeholder="Frequency">
+                     <label for="frequency-input"><strong>Frequency:</strong></label>
+                     <input type="number" class="form-control" max="59" id="frequency-input"><br>
                     </div>
                     <button type="submit" class="btn btn-warning" id="submit">Submit</button>
-                    <button type="clear" class="btn btn-light">Clear</button>
+                    <button type="clear" class="btn btn-warning">Clear</button>
             </form>
+            </div>
+        </div>
         </div>
         <script type="text/javascript" src="assets/JS/train.js"></script>
     </body>
