--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <th scope="col">Destination</th>
                         <th scope="col">Next Arrival</th>
                         <th scope="col">Frequency(mins)</th>
-                        <th scope="col">Minutes Away</th>
+                        <th scope="col">Minutes Away(Next Train)</th>
                         </tr>
                     </thead>
                     <tbody id="train-display"></tbody>
